--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ futures = "0.1"
 libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "eeed66707b483448d641b9824a8f726121c5a334" }
 tokio = "0.1"
 tokio-io = "0.1"
+void = "1.0"
 
 [[bin]]
 name = "welcome"
